# desktop-postflop

./: .eslintrc.cjs  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pixi.toml  tailwind.config.cjs  tsconfig.json  vite.config.ts
docs/superpowers/plans/: 2026-06-14-web-server-phase-1.md  2026-06-15-training-precompute-cli.md  2026-06-15-web-react-rewrite.md  2026-06-16-gto-training-system.md  2026-06-19-training-history-export.md
postflop-solver/: Cargo.toml
postflop-solver/src/: file.rs  utility.rs
src/: invokes.ts  result-types.ts  store.ts  style.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/postflop-solver/src/: file.rs
src-tauri/postflop-solver/src/game/: mod.rs
src-tauri/src/: lib.rs  main.rs  solver.rs  training_precompute.rs
src-tauri/src/web/: app_state.rs  bunching.rs  files.rs  game.rs  memory_guard.rs  mod.rs  preflop.rs  range.rs  system.rs  training.rs  tree.rs
src/app/: App.tsx  main.tsx  navigation.ts  router.tsx  store.ts
src/components/: AboutPage.vue  App.vue  BoardSelector.vue  BoardSelectorCard.vue  BunchingEffect.vue  DbItemPicker.vue  GameChance.vue  GameNav.vue  GameTable.vue  GameViewer.vue  NavBar.vue  RangeEditor.vue  RangeMiniViewer.vue  ResultBasics.vue  ResultChance.vue  ResultCompare.vue  ResultGraphs.vue  ResultMiddle.vue  ResultNav.vue  ResultTable.vue  ResultViewer.vue  RunSolver.vue  SideBar.vue  TreeConfig.vue  TreeEditor.vue
training-profiles/: 6max-heads-up.json  dev-light.json  example.json  smoke.json
(+36 files in other folders)
